Add new features or fixes to InvoiceItemController
